--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "prepare": "husky"
+    "prepare": "husky",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cypress:run"
   },
   "engines": {
     "node": ">=20"
@@ -41,11 +43,13 @@
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "commitlint": "^19.3.0",
+    "cypress": "^13.12.0",
     "husky": "^9.0.11",
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "start-server-and-test": "^2.0.4",
     "tailwindcss": "^3.4.4",
     "typescript": "5.4.5",
     "vitest": "^1.6.0",
